# SPA-CGAL

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BooleanOp.vcxproj  BooleanOp.vcxproj.filters  CLAUDE.md  CMakeLists.txt  CMakePresets.json  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  vcpkg.json
.claude/: settings.local.json
docs/: 01-mission-vision.md  02-stakeholders-use-cases.md  03-requirements.md  04-validation-strategy.md  05-system-boundaries.md  06-data-model.md  07-functional-model.md  08-architecture.md  09-design-baseline.md
docs/GuidingResources/: GeometryStackResearch_TightFitShellModeling.docx  GeometryStackResearch_TightFitShellModeling.md  SDLC_Plan2.txt  SPA_Original_Algorithm.txt  SPA_Original_Concept.txt  UnrealEngineGhostingBlueprintGuide.docx  unreal_engine_ghosting_blueprint_guide.md
sample/: config.ini  config_batch.ini  config_boolean.ini  config_sweep.ini  cube_a.off  cube_b.off  transforms.csv
sample/model/: sampleModel.blend  sampleModel.blend1  sampleModel.mtl
src/: BatchMerge.h  Benchmark.h  Config.h  MeshUtils.h  TransformSweep.h  main.cpp
